// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputButton /> renders 1`] = `
<Button
  action={[Function]}
  className={undefined}
  text="1"
/>
`;

exports[`<InputButton /> renders with className 1`] = `
.glamor-0,
[data-glamor-0] {
  color: rebeccapurple;
}

<Button
  action={[Function]}
  className={
    Object {
      "data-glamor-0": "",
    }
  }
  text="1"
/>
`;
